--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,24 @@
 beautifulsoup4==4.10.0
+branca==0.4.2
 certifi==2021.10.8
 charset-normalizer==2.0.12
+click==8.0.4
+decorator==5.1.1
+folium==0.12.1.post1
+future==0.18.2
+geocoder==1.38.1
+geographiclib==1.52
 idna==3.3
+importlib-metadata==4.8.3
+Jinja2==3.0.3
 lxml==4.8.0
+MarkupSafe==2.0.1
+numpy==1.19.5
 pkg_resources==0.0.0
+ratelim==0.1.6
 requests==2.27.1
+six==1.16.0
 soupsieve==2.3.1
+typing_extensions==4.1.1
 urllib3==1.26.8
+zipp==3.6.0
